--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                         <div class="profile-picture">
                             <img src="assets/images/profile-10.jpg" alt="">
                         </div>
-                        <p class="name">Fred McCain</p>
+                        <p class="name">Fredda McCain</p>
                     </div>
                     <div class="story">
                         <div class="profile-picture">
@@ -365,7 +365,7 @@
                         </div>
 
                         <div class="photo">
-                            <img src="assets/images/feed-4.jpg" alt="feed-1">
+                            <img src="assets/images/feed-8.jpg" alt="feed-1">
                         </div>
 
                         <div class="action-buttons">
@@ -509,7 +509,7 @@
                         </div>
 
                         <div class="photo">
-                            <img src="assets/images/feed-7.jpg" alt="feed-1">
+                            <img src="assets/images/feed-6.jpg" alt="feed-1">
                         </div>
 
                         <div class="action-buttons">
@@ -558,7 +558,7 @@
                         </div>
 
                         <div class="photo">
-                            <img src="assets/images/feed-4.jpg" alt="feed-1">
+                            <img src="assets/images/feed-7.jpg" alt="feed-1">
                         </div>
 
                         <div class="action-buttons">
